tests/baselines/reference/project/cantFindTheModule/amd/cantFindTheModule.errors.txt
decl.ts(1,26): error TS2307: Cannot find module './foo/bar.tx' or its corresponding type declarations.
decl.ts(2,26): error TS2307: Cannot find module 'baz' or its corresponding type declarations.
decl.ts(3,26): error TS2307: Cannot find module './baz' or its corresponding type declarations.


==== decl.ts (3 errors) ====
    import modErr  = require("./foo/bar.tx");
                             ~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './foo/bar.tx' or its corresponding type declarations.
    import modErr1 = require("baz");
                             ~~~~~
!!! error TS2307: Cannot find module 'baz' or its corresponding type declarations.
    import modErr2 = require("./baz");
                             ~~~~~~~
!!! error TS2307: Cannot find module './baz' or its corresponding type declarations.
    
    //import modErr1 = require("\bar");
    
    //import mod  = require("./foo/bar");
    //import mod1 = require("../module paths/foo/bar");
    //import mod2 = require("foo/bar");
    
    